style(UI): change UI in activity to make better use of space

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
   <string name="app_name">RandomNews</string>
   <string name="title">The RandomNews</string>
   <string name="subtitle">News sponsored by NewsAPI.org</string>
+  <string name="arroba">@</string>
+  <string name="at">at</string>
 </resources>
